<resources>
    <string name="app_name">My Time Checker</string>
    <string name="end_label">End</string>
    <string name="start_label">Start</string>
    <string name="minus">-</string>
    <string name="plus">+</string>
    <string name="theirTimeText">Their Time</string>
    <string name="myTimeText">My Time</string>
    <string name="flagDesc">Flag</string>
    <string name="about1">My Time Checker</string>
    <string name="about2">by Nick Greenan</string>
    <string name="about3">View the source code on GitHub:</string>
    <string name="about4"><u>https://github.com/ngreenan/TimeZoneTest</u></string>
    <string name="about5">ShiftColorPicker by DASAR</string>
    <string name="about6"><u>https://github.com/DASAR/ShiftColorPicker</u></string>
    <string name="about7">Flags by www.gosquared.com</string>
    <string name="about8"><u>https://www.gosquared.com/resources/flag-icons/</u></string>
</resources>
